<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/windowBackground"
    android:paddingBottom="@dimen/default_scroll_top_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/windowBackground"
        android:orientation="vertical">
        <TextView
            style="@style/AppTheme.SectionTitle"
            android:text="@string/expense_section_title" />
        <LinearLayout style="@style/AppTheme.InputRowLayoutWithPadding">
            <TextView
                style="@style/AppTheme.InputLabel"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/merchant_pic" />
        </LinearLayout>

        <RelativeLayout style="@style/AppTheme.InputRowLayoutWithPadding">

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="170dp"
                android:layout_height="160dp"
                android:layout_marginLeft="40sp"
                android:layout_marginRight="30sp"
                android:adjustViewBounds="true"
                android:scaleType="fitStart" />

            <RelativeLayout style="@style/AppTheme.InputRowLayout">

                <Button
                    android:id="@+id/image_receipt"
                    style="@style/AppTheme.ButtonLayout"
                    android:layout_marginLeft="220sp"
                    android:layout_marginRight="20sp"
                    android:background="@drawable/round"
                    android:text="Upload Receipt" />

            </RelativeLayout>


        </RelativeLayout>

        <RelativeLayout
            style="@style/AppTheme.InputRowLayout"
            android:layout_marginTop="-6sp"
            >

            <TextView
                android:id="@+id/image_value"
                style="@style/AppTheme.InputLabel"
                android:layout_width="wrap_content"
                android:layout_gravity="center" />
        </RelativeLayout>

        <LinearLayout style="@style/AppTheme.InputRowLayoutWithPadding"
            android:layout_marginTop="-7sp">

            <TextView
                style="@style/AppTheme.InputLabel"
                android:layout_gravity="center"
                android:text="@string/date" />


            <LinearLayout style="@style/AppTheme.InputRowLayoutWithPadding">

                <TextView
                    android:id="@+id/date"
                    style="@style/AppTheme.InputLabel"
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout style="@style/AppTheme.InputRowLayoutWithPadding">

            <TextView
                style="@style/AppTheme.InputLabel"
                android:layout_gravity="center"
                android:text="@string/currency_value" />

            <LinearLayout style="@style/AppTheme.InputRowLayoutWithPadding">

                <Spinner
                    android:id="@+id/spinner_currency"
                    style="@style/Spinner"
                    android:layout_width="0dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:entries="@array/currency_type" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout style="@style/AppTheme.InputRowLayoutWithPadding">

            <TextView
                style="@style/AppTheme.InputLabel"
                android:text="@string/total" />

            <EditText
                android:id="@+id/total"
                style="@style/AppTheme.InputEditText"
                android:hint="0.00"
                android:textColorHint="@color/colorPrimaryDark"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout style="@style/AppTheme.InputRowLayoutWithPadding">

            <TextView
                style="@style/AppTheme.InputLabel"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:text="@string/comment" />

        </LinearLayout>

        <LinearLayout style="@style/AppTheme.InputRowLayoutWithPadding">

            <EditText
                android:id="@+id/comment"
                style="@style/AppTheme.InputEditText"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="2000"
                android:maxLines="5"
                android:scrollHorizontally="false"
                android:scrollbars="vertical"
                android:textColor="@color/colorDarkGray" />
        </LinearLayout>


        <LinearLayout style="@style/AppTheme.InputRowLayoutWithPadding">

            <TextView
                style="@style/AppTheme.InputLabel"
                android:layout_gravity="center"
                android:text="@string/category" />


            <LinearLayout style="@style/AppTheme.InputRowLayoutWithPadding">

                <Spinner
                    android:id="@+id/spinner_category"
                    style="@style/Spinner"
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:entries="@array/category_type" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.InputRowLayout"
            android:paddingTop="@dimen/activity_default_margin">

            <Button
                android:id="@+id/submit_button"
                android:background="@drawable/round"
                android:layout_marginLeft="35sp"
                android:layout_marginRight="35sp"
                style="@style/AppTheme.ButtonLayout"
                android:text="@string/done_button" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>